--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
                 <div class="contact-info">
                     <div class="contact-item">
                         <div class="social-media">
-                            <li class="icon"><a href="#"><i  class="fa fa-facebook"></i></a> </li>
-                            <li class="icon"><a href="#"><i  class="fa fa-twitter"></i></a></li>   
-                           <li class="icon"><a href="www.linkedin.com/in/sampangicharanrajeev"><i  class="fa fa-linkedin"></i></a></li>  
+                            <li class="icon"><a href="https://github.com/Charanrajeev?tab=repositories"><i  class="fa fa-facebook"></i></a> </li>
+                            <li class="icon"><a href="https://github.com/Charanrajeev?tab=repositories"><i  class="fa fa-twitter"></i></a></li>   
+                           <li class="icon"><a href="https://www.linkedin.com/in/sampangicharanrajeev"><i  class="fa fa-linkedin"></i></a></li>  
                            <li class="icon"><a href="https://github.com/Charanrajeev?tab=repositories"><i  class="fa fa-github"></i></a></li>  
                            
                         </div>
                         <div class="personal-details">
                             <li class="icon"><a href="https://e-mailer.link/100188687174"><i class="fa fa-envelope"></i></a> charanrajeevs@gmail.com</li>
-                            <li class="icon"><a href="#"><i class="fa fa-phone"></i></a> +91-9966346996</li>   
-                           <li class="icon"><a href="#" ><i class="fa fa-location-arrow"></i></a> Andhra Pradesh</li>
+                            <li class="icon"><a href="https://github.com/Charanrajeev?tab=repositories"><i class="fa fa-phone"></i></a> +91-9966346996</li>   
+                           <li class="icon"><a href="https://github.com/Charanrajeev?tab=repositories" ><i class="fa fa-location-arrow"></i></a> Andhra Pradesh</li>
 
                         </div>
                         <br>
